# code-buddy

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BRAND_LICENSE  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  RELEASING.md  float.html  index.html  install.sh  package-lock.json  package.json  vite.config.ts
.claude/skills/: .manifest.json
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
.opencode/command/: .manifest.json
.opencode/skill/: .manifest.json
.standards/: manifest.json
homebrew/: code-buddy.rb.template
npm/code-buddy/: install.js  package.json  platform.js
npm/code-buddy-darwin-arm64/: package.json
npm/code-buddy-darwin-x64/: package.json
npm/code-buddy-linux-x64/: package.json
npm/code-buddy-win32-x64/: package.json
scripts/: claude-hook.sh  generate-placeholder-animations.mjs  tauri-dev-bg.sh  tauri-dev-stop.sh
specs/: SPEC-001.md  SPEC-002.md  SPEC-003.md  SPEC-004.md
src/: App.css  App.tsx  FloatApp.tsx  float-main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dock.rs  float.rs  lib.rs  main.rs  notification.rs  popover.rs  server.rs  state.rs  tray.rs
src-tauri/src/adapters/: claude_code.rs  mod.rs  opencode.rs
src-tauri/tests/: bdd.rs
src-tauri/tests/steps/: mod.rs
src/animations/: completed.json  error.json  idle.json  thinking.json  waiting_confirm.json  waiting_input.json  working.json
src/assets/themes/ostrich/: theme.json
src/components/: BuddyAnimation.tsx  SessionList.tsx  Settings.tsx  StatusPanel.tsx
tests/: TRACEABILITY-MATRIX.md
tests/bdd/features/: SPEC-004-raw-json-hook.feature  float-window.feature  v0.1.0-skeleton.feature  v0.2.0-detection.feature  v0.3.0-panel.feature
tests/tdd/react/: App.test.tsx  BuddyAnimation.test.tsx  FloatApp.test.tsx  SessionList.test.tsx  store.test.ts
tests/tdd/rust/: claude_code_adapter_test.rs  float_settings_test.rs  notification_test.rs  server_test.rs  state_test.rs
